# LithiumX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.nxdk  README.md
.github/workflows/: build.yml
src/: dash.c  dash.h  dash_browser.c  dash_browser.h  dash_database.c  dash_database.h  dash_debug.c  dash_debug.h  dash_eeprom.c  dash_eeprom.h  dash_filebrowser.c  dash_launcher.c  dash_launcher.h  dash_main.c  dash_mainmenu.c  dash_mainmenu.h  dash_menu.c  dash_menu.h  dash_scroller.c  dash_scroller.h  dash_settings.c  dash_settings.h  dash_styles.c  dash_styles.h  dash_synop.c  dash_synop.h  dash_titlelist.c  dash_titlelist.h  lithiumx.h  lv_conf.h  main.c
src/dash_resources/: default_tbn.c  qrcode.c
src/helpers/: fileio.c  fileio.h  nano_debug.c  nano_debug.h
src/lib/ftpd/: ftp.c  ftp.h  ftp_file.c  ftp_file.h  ftp_server.c  ftp_server.h
src/lib/jpg_decoder/: LICENSE  jpg_decoder.c  jpg_decoder.h
src/lib/nvnetdrv/: nvnetdrv.c  nvnetdrv.h  nvnetdrv_lwip.c  nvnetdrv_regs.h
src/lib/xgu/: xgux.h
src/libs/ftpd/: ftp.h  ftp_file.c  ftp_file.h  ftp_server.c  ftp_server.h
src/libs/jpg_decoder/: CMakeLists.txt  jpg_decoder.c  jpg_decoder.h
src/libs/nanoprintf/: nanoprintf.h
src/libs/toml/: toml.c
src/libs/xgu/: nv2a_regs.h  xgu.h
src/lvgl_drivers/: lv_pbgl_disp.c  lv_sdl_disp.c  lv_sdl_indev.c  lv_xgu_disp.c
src/lvgl_drivers/input/sdl/: lv_sdl_indev.c
src/lvgl_drivers/pbgl/: lv_draw_pbgl.c  lv_draw_pbgl.h  pbgl_rect.c
src/lvgl_drivers/video/sdl/: lv_sdl_disp.c
src/lvgl_drivers/video/xgu/: lv_xgu_disp.c  lv_xgu_draw.c  lv_xgu_draw.h  lv_xgu_rect.c  lv_xgu_texture.c  notexture.ps  texture.ps
src/lvgl_drivers/xgu/: lv_draw_xgu.c  lv_draw_xgu.h  lv_xgu_disp.c  lv_xgu_draw.c  lv_xgu_draw.h  lv_xgu_rect.c  lv_xgu_texture.c  swizzle.c  swizzle.h  texture.inl  xgu_rect.c
src/lvgl_widgets/: confirmbox.c  confirmbox.h  fileio.c  generic_container.c  generic_container.h  helpers.c  helpers.h  menu.c  menu.h
src/platform/: lwipcfg.h  lwipopts.h  platform.h  platform_generic.c  platform_xbox.c
src/platform/generic/: network.c  platform.c
src/platform/linux/: dash_linux.h  glue.c  platform.c
src/platform/win32/: platform.c  sqlite_win32.c
src/platform/xbox/: network.c  platform.c  xbox_checkupdate.c  xbox_info.h  xbox_launch.c  xbox_mbedtls_conf.h  xboxlaunch.c
